# LindenShoreAssessment

./: .gitignore  CMakeLists.txt  Linden Shore - C++ Technical Assessment.docx  Makefile  README.md  build.sh  test_data.csv  test_main.cpp
include/: pnl_calculator_accountingtraits.h  pnl_calculator_concepts.h  pnl_calculator_constants.h  pnl_calculator_engine.h  pnl_calculator_engine.hxx  pnl_calculator_enums.h  pnl_calculator_macros.h  pnl_calculator_parser.h  pnl_calculator_parser.hxx  pnl_calculator_types.h  pnl_calculator_types.hxx  pnl_calculator_utils.h
src/: main.cpp
